--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+
+footer{
+    background-color: blue;
+    text-align: center;
+}
+
 body{
     background-color: lightgray;
     display:flex;
@@ -9,6 +15,8 @@ body{
     
     
 }
+
+
 
 .employee{
     display:flex;
